--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <title>Search images</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alkatra:wght@600&family=Caveat:wght@400;700&family=Cinzel+Decorative&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
+    <section class="section">
+      <h1 class="section-title">Let`s find some pictures with pixabay API</h1>
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search here..."
+        />
+        <button class="submit" type="submit">Search</button>
+      </form>
+    </section>
+    <div class="container">
+      <div class="gallery">
+      </div>
+    </div>
+    <button type="button" class="load-more is-hidden">Load more</button>
+
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
